# sorting_and_searching

./: CMakeLists.txt  binarysearch.cpp  comparepermutations.cpp  duplicates_num.cpp  flexibleintsort.cpp  linearsearch.cpp  odd_even.cpp  randompermute.cpp  reverse_vec.cpp  rotate_vector.cpp  rotate_vector.h  searchcompare.cpp  sorting_vector.cpp  sortintegers.cpp  stlpermutations.cpp  vectorpermutations.cpp
